<?xml version="1.0"?>
<package>
  <name>description_lwa4p</name>
  <version>0.0.0</version>
  <maintainer email="mirec@todo.todo">mirec</maintainer>
  <description>The description_lwa4p package</description>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>